Adding restrictions d'eau
Signed-off-by: Gaël L'hopital <gael@lhopital.org>